stuck-at-home edits

--- a/public/drinkList.html
+++ b/public/drinkList.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>drinkList</title>
+        <title>Shopping List</title>
         <meta charset="utf-8">
         <link  rel="stylesheet" href="https://fonts.googleapis.com/css?family=Satisfy&display=swap">
         <script type='text/javascript' src='/jquery.min.js'></script>
@@ -12,6 +12,14 @@
         <link rel="stylesheet" type='text/css' href="/styles.css">
     </head>
     <body>
+        <div class='navBar'>
+            <a href='index.html'>Logout</a>
+            <a href='ingredientUser.html'>My Drinks</a>
+            <a href='pantry.html'>Pantry</a>
+            <a href='favorites.html'>Favorites</a>
+            <a href='index.html'>Shopping List</a>
+        </div>
+        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
         <ul id='ingredientCards'></ul>
     </body>
 </html>
