--- a/public/pantry.html
+++ b/public/pantry.html
@@ -14,11 +14,12 @@
             <a href='index.html'>Logout</a>
             <a href='ingredientUser.html'>My Drinks</a>
             <a href='pantry.html'>Pantry</a>
-            <a href='index.html'>Favorites</a>
-            <a href='index.html'>Shopping List</a>
+            <a href='favorites.html'>Favorites</a>
+            <a href='shoppingList.html'>Shopping List</a>
         </div>
         <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
         <button id='addMore'><a href='searchIngredient.html'>Add More Ingredients</a></button>
+        <button id='delete'>Delete Selected Ingredients</button>
         <ul id='ingredientCards'></ul>
     </body>
 </html>
