--- a/public/searchIngredient.html
+++ b/public/searchIngredient.html
@@ -14,8 +14,8 @@
             <a href='index.html'>Logout</a>
             <a href='ingredientUser.html'>My Drinks</a>
             <a href='pantry.html'>Pantry</a>
-            <a href='index.html'>Favorites</a>
-            <a href='index.html'>Shopping List</a>
+            <a href='favorites.html'>Favorites</a>
+            <a href='shoppingList.html'>Shopping List</a>
         </div>
         <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
         <h3>Select the ingredients that you have at home</h3>
