landing page; reduce server calls
changed index.html to better landing page style. Store user data in localStorage to reduce server calls.

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,49 @@
         <link href="C:Users\maci\Documents\cocktailApi\images">
     </head>
     <body>
-        <img id="background" src='\images\kim-daniels-p6XuDW03YjE-unsplash.jpg'>
-        <a href='.'><h1>Cocktail Helper</h1></a>
-        <h2 id="signUp">Sign Up</h2>
-        <h2 id="logIn">Sign In</h2>
+        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+        <div class='home'>
+            <h1 id='title'>Cocktail Helper</h1>
+            <div class='containPic'></div>
+            <video id='backgroundPic1' autoplay loop muted>
+                <source src="\images\Cocktail-23841.mp4" type="video/mp4">
+            </video>
+            <i class="fas fa-chevron-down"></i>
+        </div>
+        <div class='home'>
+            <div class='containPic'>
+                <div class='gallery'>
+                        <img class="galleryPic" src='\images\a-drink-in-a-glass-with-green-leaf-2691360.jpg'>
+                        <img class="galleryPic" src='\images\lime-juice-and-fruit-shake-on-glass-452737.jpg'>
+                        <img class="galleryPic" src='\images\photo-of-mint-leaves-on-glass-4051263.jpg'>
+                </div>
+                <h3 id='firstWords'>What will <br>you create?</h3>
+            </div>
+        </div>
+        <div class='home'>
+            <div class='containPic'>
+                <img class="backgroundPic" src='\images\kim-daniels-p6XuDW03YjE-unsplash.jpg'>
+                <div class='titleContainer'>
+                    <h3 class='subtitles'>Craft Expert Cocktails</h3>
+                    <p>Tell us what ingredients you have at home, and we'll give you a list of what to make, and how to make it.</p>
+                </div>
+            </div>
+        </div>
+        <div class='home'>
+            <div class='containPic'>
+                <img class="backgroundPic1" src='\images\cocktails.jpg'>
+                <div class='titleContainer1'>
+                    <h3>Explore Endless Possibilities</h3>
+                    <p>Browse through our 1000's of cocktails to learn what ingredients you're missing and add them to your shopping list.</p>
+                </div>
+            </div>
+        </div>
+        <div class='home'>
+            <div class='containPic'>
+                <h3 id='endTitle'>Create an Unforgettable Experience</h3>
+                <h2 id="signUp">Sign Up</h2>
+                <h2 id="logIn">Log In</h2>
+            </div>
+        </div>
     </body>
 </html>
