--- a/public/favorites.html
+++ b/public/favorites.html
@@ -3,6 +3,7 @@
     <head>
         <title>Favorites</title>
         <meta charset="utf-8">
+        <link  rel="stylesheet" href="https://fonts.googleapis.com/css?family=Satisfy&display=swap">
         <script src="https://kit.fontawesome.com/5b2a098684.js" crossorigin="anonymous"></script>
         <script type='text/javascript' src='/jquery.min.js'></script>
         <script type='text/javascript' src='/binarySearchTree.js'></script>
@@ -12,7 +13,7 @@
     </head>
     <body>
         <div class='navBar'>
-            <a href='index.html'>Logout</a>
+            <a href='index.html'>Cocktail Helper</a>
             <a href='ingredientUser.html'>My Drinks</a>
             <a href='pantry.html'>Pantry</a>
             <a href='favorites.html'>Favorites</a>
