--- a/public/pantry.html
+++ b/public/pantry.html
@@ -3,6 +3,7 @@
     <head>
         <title>User Drinks</title>
         <meta charset="utf-8">
+        <link  rel="stylesheet" href="https://fonts.googleapis.com/css?family=Satisfy&display=swap">
         <script type='text/javascript' src='/jquery.min.js'></script>
         <script type='text/javascript' src='/binarySearchTree.js'></script>
         <script type='text/javascript' src='/script.js'></script>
@@ -11,14 +12,14 @@
     </head>
     <body>
         <div class='navBar'>
-            <a href='index.html'>Logout</a>
+            <a href='index.html'>Cocktail Helper</a>
             <a href='ingredientUser.html'>My Drinks</a>
             <a href='pantry.html'>Pantry</a>
             <a href='favorites.html'>Favorites</a>
             <a href='shoppingList.html'>Shopping List</a>
         </div>
         <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-        <button id='addMore'><a href='searchIngredient.html'>Add More Ingredients</a></button>
+        <button id='addMore'>Add More Ingredients</a></button>
         <button id='delete'>Delete Selected Ingredients</button>
         <ul id='ingredientCards'></ul>
     </body>
