--- a/public/ingredientUser.html
+++ b/public/ingredientUser.html
@@ -3,12 +3,12 @@
     <head>
         <title>User Drinks</title>
         <meta charset="utf-8">
+        <link  rel="stylesheet" href="https://fonts.googleapis.com/css?family=Satisfy&display=swap">
         <script src="https://kit.fontawesome.com/5b2a098684.js" crossorigin="anonymous"></script>
         <script type='text/javascript' src='/jquery.min.js'></script>
         <script type='text/javascript' src='/binarySearchTree.js'></script>
         <script type='text/javascript' src='/script.js'></script>
         <script type='text/javascript' src='/ingredientScript.js'></script>
-        <script type='text/javascript' src='/userIngredient.js'></script>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -16,7 +16,7 @@
             <p>Loading...</p>
         </div>
         <div class='navBar'>
-            <a href='index.html'>Logout</a>
+            <a href='index.html'>Cocktail Helper</a>
             <a href='ingredientUser.html'>My Drinks</a>
             <a href='pantry.html'>Pantry</a>
             <a href='favorites.html'>Favorites</a>
