--- a/public/searchIngredient.html
+++ b/public/searchIngredient.html
@@ -3,6 +3,7 @@
     <head>
         <title>Ingredient Search</title>
         <meta charset="utf-8">
+        <link  rel="stylesheet" href="https://fonts.googleapis.com/css?family=Satisfy&display=swap">
         <script src='jquery.min.js'></script>
         <script src='binarySearchTree.js'></script>
         <script src='script.js'></script>
@@ -11,7 +12,7 @@
     </head>
     <body>
         <div class='navBar'>
-            <a href='index.html'>Logout</a>
+            <a href='index.html'>Cocktail Helper</a>
             <a href='ingredientUser.html'>My Drinks</a>
             <a href='pantry.html'>Pantry</a>
             <a href='favorites.html'>Favorites</a>
@@ -21,7 +22,6 @@
         <h3>Select the ingredients that you have at home</h3>
         <button id='save'>save</button>
         <input id='ingredientBox' placeholder="search for ingredients">
-        <button id='ingredientSearch'>Go!</button>
         <ul id='ingredientCards'></ul>
     </body>
 </html>
