--- a/public/shoppingList.html
+++ b/public/shoppingList.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div class='navBar'>
-            <a href='index.html'>Logout</a>
+            <a href='index.html'>Cocktail Helper</a>
             <a href='ingredientUser.html'>My Drinks</a>
             <a href='pantry.html'>Pantry</a>
             <a href='favorites.html'>Favorites</a>
