--- a/public/drinkList.html
+++ b/public/drinkList.html
@@ -3,6 +3,7 @@
     <head>
         <title>Shopping List</title>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
         <link  rel="stylesheet" href="https://fonts.googleapis.com/css?family=Satisfy&display=swap">
         <script type='text/javascript' src='/jquery.min.js'></script>
         <script type='text/javascript' src='/binarySearchTree.js'></script>
@@ -13,11 +14,21 @@
     </head>
     <body>
         <div class='navBar'>
-            <a href='index.html'>Cocktail Helper</a>
+            <a href='index.html'></i>Cocktail Helper</a>
+
+            <a href='ingredientUser.html'><i class="fas fa-glass-martini"></i>
             <a href='ingredientUser.html'>My Drinks</a>
+
+            <a href='pantry.html'><i class="fas fa-door-closed"></i></a>
             <a href='pantry.html'>Pantry</a>
+
+            <button id='mobileButton'><i class="fas fa-plus"></i></button>
+
+            <a href='favorites.html'><i class="fas fa-star"></i></a>
             <a href='favorites.html'>Favorites</a>
-            <a href='index.html'>Shopping List</a>
+
+            <a href='shoppingList.html'><i class="fas fa-list"></i></a>
+            <a href='shoppingList.html'>Shopping List</a>
         </div>
         <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
         <ul id='ingredientCards'></ul>
