--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
 
         <title>Cocktail Finder</title>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
         <link  rel="stylesheet" href="https://fonts.googleapis.com/css?family=Satisfy&display=swap">
         <script type='text/javascript' src='/jquery.min.js'></script>
         <script type='text/javascript' src='/binarySearchTree.js'></script>
-        <script src='priorityQueue.js'></script>
         <script type='text/javascript' src='/login.js'></script>
         <link rel="stylesheet" type='text/css' href="/styles.css">
         <link href="C:Users\maci\Documents\cocktailApi\images">
@@ -16,11 +16,12 @@
         <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
         <div class='home'>
             <h1 id='title'>Cocktail Helper</h1>
-            <div class='containPic'></div>
-            <video id='backgroundPic1' autoplay loop muted>
-                <source src="\images\Cocktail-23841.mp4" type="video/mp4">
-            </video>
-            <i class="fas fa-chevron-down"></i>
+            <div class='containPic'>
+                <video id='backgroundPic1' autoplay loop muted>
+                    <source src="\images\Cocktail-23841.mp4" type="video/mp4">
+                </video>
+                <i class="fas fa-chevron-down"></i>
+            </div>
         </div>
         <div class='home'>
             <div class='containPic'>
