--- a/public/searchIngredient.html
+++ b/public/searchIngredient.html
@@ -3,7 +3,9 @@
     <head>
         <title>Ingredient Search</title>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
         <link  rel="stylesheet" href="https://fonts.googleapis.com/css?family=Satisfy&display=swap">
+        <script src="https://kit.fontawesome.com/5b2a098684.js" crossorigin="anonymous"></script>
         <script src='jquery.min.js'></script>
         <script src='binarySearchTree.js'></script>
         <script src='script.js'></script>
@@ -12,16 +14,27 @@
     </head>
     <body>
         <div class='navBar'>
-            <a href='index.html'>Cocktail Helper</a>
+            <a href='index.html'></i>Cocktail Helper</a>
+
+            <a href='ingredientUser.html'><i class="fas fa-glass-martini"></i>
             <a href='ingredientUser.html'>My Drinks</a>
+
+            <a href='pantry.html'><i class="fas fa-door-closed"></i></a>
             <a href='pantry.html'>Pantry</a>
+
+            <button id='mobileButton'><i class="fas fa-search"></i></button>
+
+            <a href='favorites.html'><i class="fas fa-star"></i></a>
             <a href='favorites.html'>Favorites</a>
+
+            <a href='shoppingList.html'><i class="fas fa-list"></i></a>
             <a href='shoppingList.html'>Shopping List</a>
         </div>
         <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-        <h3>Select the ingredients that you have at home</h3>
+        <h3>Select some ingredients that you have.</h3>
+        
         <button id='save'>save</button>
-        <input id='ingredientBox' placeholder="search for ingredients">
+        <input id='ingredientBox' placeholder="start typing here to search">
         <ul id='ingredientCards'></ul>
     </body>
 </html>
