--- a/public/ingredientUser.html
+++ b/public/ingredientUser.html
@@ -19,8 +19,8 @@
         <div class='navBar'>
             <a href='index.html'></i>Cocktail Helper</a>
 
-            <a href='ingredientUser.html'><i class="fas fa-glass-martini" style='color: var(--text-color2)'></i>
-            <a href='ingredientUser.html' style='color: var(--text-color2)'>My Drinks</a>
+            <a href='ingredientUser.html'><i class="fas fa-glass-martini" style='color: var(--text-color)'></i>
+            <a href='ingredientUser.html' style='color: var(--text-color)'>My Drinks</a>
 
             <a href='pantry.html'><i class="fas fa-door-closed"></i></a>
             <a href='pantry.html'>Pantry</a>
