--- a/public/pantry.html
+++ b/public/pantry.html
@@ -19,10 +19,10 @@
             <a href='ingredientUser.html'><i class="fas fa-glass-martini"></i>
             <a href='ingredientUser.html'>My Drinks</a>
 
-            <a href='pantry.html'><i class="fas fa-door-closed" style='color: var(--text-color2)'></i></a>
-            <a href='pantry.html' style='color: var(--text-color2)'>Pantry</a>
+            <a href='pantry.html'><i class="fas fa-door-closed" style='color: var(--text-color)'></i></a>
+            <a href='pantry.html' style='color: var(--text-color)'>Pantry</a>
 
-            <button id='mobileButton'><i class="fas fa-plus"></i></button>
+            <button id='mobileButton'><i class="fas fa-plus"></i><i class="fas fa-trash-alt" style="display: none"></i></button>
 
             <a href='favorites.html'><i class="fas fa-star"></i></a>
             <a href='favorites.html'>Favorites</a>
