--- a/public/searchIngredient.html
+++ b/public/searchIngredient.html
@@ -22,7 +22,7 @@
             <a href='pantry.html'><i class="fas fa-door-closed"></i></a>
             <a href='pantry.html'>Pantry</a>
 
-            <button id='mobileButton'><i class="fas fa-search"></i></button>
+            <button id='mobileButton'><i class="fas fa-search"></i><i class="fas fa-save" style="display: none"></i></button>
 
             <a href='favorites.html'><i class="fas fa-star"></i></a>
             <a href='favorites.html'>Favorites</a>
