--- a/public/shoppingList.html
+++ b/public/shoppingList.html
@@ -27,8 +27,8 @@
             <a href='favorites.html'><i class="fas fa-star"></i></a>
             <a href='favorites.html'>Favorites</a>
 
-            <a href='shoppingList.html'><i class="fas fa-list" style='color: var(--text-color2)'></i></a>
-            <a href='shoppingList.html' style='color: var(--text-color2)'>Shopping List</a>
+            <a href='shoppingList.html'><i class="fas fa-list" style='color: var(--text-color)'></i></a>
+            <a href='shoppingList.html' style='color: var(--text-color)'>Shopping List</a>
         </div>
         <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
         <ul id='shoppingList'></ul>
