--- a/public/favorites.html
+++ b/public/favorites.html
@@ -24,8 +24,8 @@
 
             <button id='mobileButton'><i class="fas fa-plus"></i></button>
 
-            <a href='favorites.html'><i class="fas fa-star" style='color: var(--text-color2)'></i></a>
-            <a href='favorites.html' style='color: var(--text-color2)'>Favorites</a>
+            <a href='favorites.html'><i class="fas fa-star" style='color: var(--text-color)'></i></a>
+            <a href='favorites.html' style='color: var(--text-color)'>Favorites</a>
 
             <a href='shoppingList.html'><i class="fas fa-list"></i></a>
             <a href='shoppingList.html'>Shopping List</a>
