change mobile login color

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" type='text/css' href="/styles.css">
         <link href="C:Users\maci\Documents\cocktailApi\images">
     </head>
-    <body>
+    <body id='mainBody'>
         <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
         <div class='home'>
             <h1 id='title'>Cocktail Helper</h1>
